--- a/source/_posts/記錄多國語言的使用/記錄多國語言的使用.md
+++ b/source/_posts/記錄多國語言的使用/記錄多國語言的使用.md
@@ -1,12 +1,10 @@
 ---
 title: 記錄多國語言的使用
-categories:
-  - 記錄
-tags:
-  - angular
+categories: [記錄]
+tags: [angular]
 date: 2018-03-08 17:22:46
 ---
-# 記錄AngularJS的使用
+### 記錄AngularJS的使用
 使用 angular-translate 模塊的前期準備工作
 使用 bower 管理工具下載 angular 及 angular-translate 模塊
 ```
@@ -18,7 +16,7 @@ angular-translate-loader-static-files
 上面2個json文件對應相同的鍵 ,我們稱之為 翻譯鍵,不同的語言文件中,
 相同的翻譯鍵對應相應的翻譯值即可.如 "Login" 對應 "登錄"
 
-接下來我們需要在註入依賴:
+接下來我們需要在依賴注入:
 ```
 var App = angular.module('App', ['ui.bootstrap', 'pascalprecht.translate']);
 App.config(['$translateProvider', function ($translateProvider) {
@@ -30,3 +28,16 @@ App.config(['$translateProvider', function ($translateProvider) {
     });
 }]);
 ```
+### 工具相關
+1. 支援NuGet安裝，使用 ClosedXML 的lib
+2. 以Open XML SDK為基礎，所以只支援xlsx，不支援xls格式
+* 資源檔 以Resource 以ResXResourceWriter為主
+* json檔 以c# 的Dictionary為主和Json.NET來轉換
+
+#### 參考資料
+* [使用Excel維護多國語系字串資源檔](http://blog.darkthread.net/post-2013-07-02-resx-excel-conversion.aspx)
+* [Angular2 在專案加入多國語系](http://kyleap.blogspot.tw/2016/11/angular2.html)
+
+
+
+
