--- a/source/_posts/車主端專案相關/車主端專案相關.md
+++ b/source/_posts/車主端專案相關/車主端專案相關.md
@@ -7,20 +7,20 @@ date: 2018-03-06 14:19:44
 測試帳號
 
 
-## 建立新的專案
+### 建立新的專案
 ```
 ng new Gomo3Customer --routing --style scss
 ```
 若不想要建立資料夾，可以加上 --flat 參數
 
-## 安裝bootstrap3
+### 安裝bootstrap3
 ```
 npm install bootstrap@3
 npm install font-awesome
 npm install jquery
 npm install -D @types/jquery
 ```
-## 使用bootstrap3 
+### 使用bootstrap3 
 這是全域的使用在.angular-cli.json裏設定
 ```
 "styles": [
@@ -33,7 +33,7 @@ npm install -D @types/jquery
   "../node_modules/bootstrap/dist/js/bootstrap.js"
 ],
 ```
-## 可修變預設的port
+### 可修變預設的port
 這是全域的使用在.angular-cli.json裏設定，在最底下加入
 ```
  "defaults": {
@@ -44,7 +44,7 @@ npm install -D @types/jquery
     }
   }
 ```
-## 加入toast
+### 加入toast
 ```
 npm install ngx-toastr --save
 npm install @angular/animations --save
@@ -72,7 +72,7 @@ ToastrModule.forRoot({   // 設定toastmessage
       autoDismiss: true
     }), // ToastrModule added
 ```
-## 加入 oidc-client
+### 加入 oidc-client
 ```
 npm install  oidc-client --save
 ```
@@ -85,11 +85,11 @@ npm install  oidc-client --save
         { "glob": "silent-renew.html", "input": "./", "output": "./" }
       ],
 ```	  
-## Import jQuery in app.module.ts.	
+### Import jQuery in app.module.ts.	
 ```
 import * as $ from 'jquery'; 
 ```
-## 以下是建立專案元件
+### 以下是建立專案元件
 注意routing在appmodule的順序
 ```
 //登入後首頁
@@ -105,3 +105,5 @@ ng g c shared\components\loginCallback
 ng g s shared\services\auth
 ng g s shared\guards\AuthGuard
 ```
+### 有關App的相關
+若是有更新版，記得到 build.gradle 更新 Version Code 和 Version Name，再次將簽署好的 APK 上傳到 Google Play
