更新多國語言的使用

--- a/source/_posts/記錄多國語言的使用/記錄多國語言的使用.md
+++ b/source/_posts/記錄多國語言的使用/記錄多國語言的使用.md
@@ -14,9 +14,9 @@ angular-translate-loader-static-files
 ```
 要引用此模組,可以在bundleconfig.json裏將此模組加入
 上面2個json文件對應相同的鍵 ,我們稱之為 翻譯鍵,不同的語言文件中,
-相同的翻譯鍵對應相應的翻譯值即可.如 "Login" 對應 "登錄"
+相同的翻譯鍵對應相應的翻譯值即可.如 "LogIn" 對應 "登錄"
 
-接下來我們需要在依賴注入:
+接下來我們需要在App的模組來依賴注入:
 ```
 var App = angular.module('App', ['ui.bootstrap', 'pascalprecht.translate']);
 App.config(['$translateProvider', function ($translateProvider) {
@@ -25,15 +25,35 @@ App.config(['$translateProvider', function ($translateProvider) {
         $translateProvider.useStaticFilesLoader({
         prefix: '/i18n/',
         suffix: '.json'
-    });
+    })
+	.useSanitizeValueStrategy('escapeParameters')
+	;
+	$translateProvider.preferredLanguage(lang);
 }]);
+```
+在html裏使用
+```
+{{ 'PasswordLogin' | translate }}
+<input class="form-control" placeholder="{{ 'ReservationSerPlaceHolder' | translate }}" name="" ng-model="query" type="text">
+<td ng-bind="'CustomerProfileCustomerType' | translate">客戶類別</td>
+```
+在Controller裏使用
+```
+$translate.onReady(function () {
+    //預約
+    $rootScope.Reservation = $translate.instant('Reservation');
+        
+}); 
 ```
 ### 工具相關
 1. 支援NuGet安裝，使用 ClosedXML 的lib
 2. 以Open XML SDK為基礎，所以只支援xlsx，不支援xls格式
 * 資源檔 以Resource 以ResXResourceWriter為主
 * json檔 以c# 的Dictionary為主和Json.NET來轉換
-
+#### 多國語系代碼
+en-US
+zh-Hant-TW
+zh-Hans-CN
 #### 參考資料
 * [使用Excel維護多國語系字串資源檔](http://blog.darkthread.net/post-2013-07-02-resx-excel-conversion.aspx)
 * [Angular2 在專案加入多國語系](http://kyleap.blogspot.tw/2016/11/angular2.html)
