更新git的使用

--- a/source/_posts/記錄多國語言的使用/記錄多國語言的使用.md
+++ b/source/_posts/記錄多國語言的使用/記錄多國語言的使用.md
@@ -45,7 +45,42 @@ $translate.onReady(function () {
         
 }); 
 ```
-### 工具相關
+#### AngularJS的uib-datepicker的使用
+因為要使用動態來切換語系,因此要將使用此模組tmh.dynamicLocale
+在mvc版裏在bundleConfig.cs加入以下的程式碼
+```
+//datapick 的多國語系
+"~/Scripts/angular-dynamic-locale/tmhDynamicLocale.min.js",
+"~/Scripts/i18n/angular-locale_en-us.js",
+"~/Scripts/i18n/angular-locale_zh-hans-cn.js",
+"~/Scripts/i18n/angular-locale_zh-tw.js", //datepicker for zh-TW
+```
+然後加入app的模組如下
+```
+var App = angular.module('MyReservationApp', ['ui.bootstrap', 'underscore', 'pascalprecht.translate', 'tmh.dynamicLocale']);
+```
+在多國語言config時設定tmh.dynamicLocale的讀取的路徑如下
+```
+//多國語言
+App.config(['$translateProvider', 'tmhDynamicLocaleProvider', function ($translateProvider, tmhDynamicLocaleProvider) {
+    var lang = window.localStorage.lang;
+    console.log('目前語言->' + lang);
+    $translateProvider.useStaticFilesLoader({
+        prefix: '/i18n/',
+        suffix: '.json'
+    })
+        .useSanitizeValueStrategy('escapeParameters')
+        ;
+    $translateProvider.preferredLanguage(lang);
+    tmhDynamicLocaleProvider.localeLocationPattern('/Scripts/i18n/angular-locale_{{locale}}.js');
+}]);
+```
+之後在controll裏可以設定使用的語言
+```
+tmhDynamicLocale.set('zh-Hant-TW');
+```
+
+#### 工具相關
 1. 支援NuGet安裝，使用 ClosedXML 的lib
 2. 以Open XML SDK為基礎，所以只支援xlsx，不支援xls格式
 * 資源檔 以Resource 以ResXResourceWriter為主
