修改設定檔的使用

--- a/source/_posts/記錄發行檔的使用/記錄發行檔的使用.md
+++ b/source/_posts/記錄發行檔的使用/記錄發行檔的使用.md
@@ -41,6 +41,28 @@ date: 2018-04-12 11:17:44
       xdt:Transform="SetAttributes" xdt:Locator="Match(name)"/>
   </connectionStrings>
   ```
+* 修改applicationSettings下面的設定值
+  在Web.Config
+  例如要修改如下的設定值，在不同的設定下使用
+  ```
+   <applicationSettings>
+    <Ckoil.CC.UI.ConsumerPortal.Properties.Settings>
+	  <setting name="ws_server" serializeAs="String">
+        <value>192.168.1.888</value>
+      </setting>
+	</Ckoil.CC.UI.ConsumerPortal.Properties.Settings>
+  </applicationSettings>
+  ```
+  如果要修改Web.En-Release的設定值
+  ```
+   <applicationSettings>
+    <Ckoil.CC.UI.ConsumerPortal.Properties.Settings>
+	<setting name="ws_server" serializeAs="String" xdt:Transform="Replace" xdt:Locator="Match(name)">
+        <value xdt:Transform="Replace">192.168.1.777</value>
+      </setting>
+	 </Ckoil.CC.UI.ConsumerPortal.Properties.Settings>
+  </applicationSettings>
+  ```
 * 建立發行檔
   在建立發行檔時，要選擇那一個設定檔
   
