加入多國語言的使用

--- a/source/_posts/記錄多國語言的使用/記錄多國語言的使用.md
+++ b/source/_posts/記錄多國語言的使用/記錄多國語言的使用.md
@@ -45,7 +45,7 @@ $translate.onReady(function () {
         
 }); 
 ```
-#### AngularJS的uib-datepicker的使用
+#### AngularJS的uib-datepicker的使用(MVC版)
 因為要使用動態來切換語系,因此要將使用此模組tmh.dynamicLocale
 在mvc版裏在bundleConfig.cs加入以下的程式碼
 ```
@@ -78,6 +78,33 @@ App.config(['$translateProvider', 'tmhDynamicLocaleProvider', function ($transla
 之後在controll裏可以設定使用的語言
 ```
 tmhDynamicLocale.set('zh-Hant-TW');
+```
+#### AngularJS的uib-datepicker的使用(Core版)
+安裝使用bower找'angular-dynamic-locale'
+因為要使用動態來切換語系,因此要將使用此模組tmh.dynamicLocale
+在bundleconfig.json加入以下的程式碼
+```
+       //datapick 的多國語系
+      "wwwroot/lib/angular-dynamic-locale/src/tmhDynamicLocale.js",
+      "wwwroot/lib/angular-i18n/angular-locale_en-us.js",
+      "wwwroot/lib/angular-i18n/angular-locale_zh-hans-cn.js",
+      "wwwroot/lib/angular-i18n/angular-locale_zh-hant-tw.js"
+```
+然後加入app的模組如下
+```
+var App = angular.module('RepairMessageApp', ['ui.router', 'ui.bootstrap', 'ngSanitize', 'ui-notification', 'pascalprecht.translate', 'tmh.dynamicLocale']);
+```
+在多國語言config時設定tmh.dynamicLocale的讀取的路徑如下
+```
+//日曆多國
+App.config(['tmhDynamicLocaleProvider', function (tmhDynamicLocaleProvider) {
+    tmhDynamicLocaleProvider.localeLocationPattern('/lib/angular-i18n/angular-locale_{{locale}}.js');
+}]);
+```
+之後在controll裏可以設定使用的語言
+在controller注入$locale,tmhDynamicLocale
+```
+
 ```
 
 #### 工具相關
