--- a/source/_posts/記錄資料庫的相關訊息/記錄資料庫的相關訊息.md
+++ b/source/_posts/記錄資料庫的相關訊息/記錄資料庫的相關訊息.md
@@ -24,3 +24,105 @@ mysqldump -u root -p test_db > test_db.sql
 ```
 mysql -u username -p test_db < test_db.sql 
 ```
+#### 修改 MySQL / MariaDB 資料庫儲存目錄
+因為在匯資入資料時，想到主要的給linux的空間不是很大，可能是此原因造成不能匯成功
+
+* 檢查原來放的位
+```
+mysql -u root -p
+```
+在mariabdb裏下指令
+```
+select @@datadir;
+```
+會顯示原來的位置
+```
++-----------------+
+| @@datadir       |
++-----------------+
+| /var/lib/mysql/ |
++-----------------+
+1 row in set (0.00 sec)
+```
+* 停止 MariaDB:
+```
+systemctl stop mariadb
+systemctl status mariadb
+```
+* 目前使用加一個空間來解決
+ * lsblk 列出系統上的所有磁碟列表
+```
+ lsblk
+``` 
+* 磁碟分割： gdisk
+```
+ [root@study ~]# gdisk /dev/vda  <==仔細看，不要加上數字喔！
+GPT fdisk (gdisk) version 0.8.6
+
+Partition table scan:
+  MBR: protective
+  BSD: not present
+  APM: not present
+  GPT: present
+
+Found valid GPT with protective MBR; using GPT.  <==找到了 GPT 的分割表！
+
+Command (? for help):     <==這裡可以讓你輸入指令動作，可以按問號 (?) 來查看可用指令
+Command (? for help): ?
+b       back up GPT data to a file
+c       change a partition's name
+d       delete a partition           # 刪除一個分割
+
+n       add a new partition          # 增加一個分割
+o       create a new empty GUID partition table (GPT)
+p       print the partition table    # 印出分割表 (常用)
+q       quit without saving changes  # 不儲存分割就直接離開 gdisk
+
+w       write table to disk and exit # 儲存分割操作後離開 gdisk
+
+?       print this menu
+Command (? for help):  
+```  
+* 用 gdisk 新增分割槽
+```
+ [root@study ~]# gdisk /dev/vda
+ Command (? for help): p
+ Number  Start (sector)    End (sector)  Size       Code  Name
+    1            2048            6143   2.0 MiB     EF02
+    2            6144         2103295   1024.0 MiB  0700
+    3         2103296        65026047   30.0 GiB    8E00
+ # 找出最後一個 sector 的號碼是很重要的！
+
+ Command (? for help): ?  # 查一下增加分割的指令為何
+ Command (? for help): n  # 就是這個！所以開始新增的行為！
+ Partition number (4-128, default 4): 4  # 預設就是 4 號，所以也能 enter 即可！
+ First sector (34-83886046, default = 65026048) or {+-}size{KMGTP}: 65026048  # 也能 enter
+ Last sector (65026048-83886046, default = 83886046) or {+-}size{KMGTP}: +1G  # 決不要 enter
+ # 這個地方可有趣了！我們不需要自己去計算磁區號碼，透過 +容量 的這個方式，
+ # 就可以讓 gdisk 主動去幫你算出最接近你需要的容量的磁區號碼喔！
+
+ Current type is 'Linux filesystem'
+ Hex code or GUID (L to show codes, Enter = 8300): # 使用預設值即可～直接 enter 下去！
+ # 這裡在讓你選擇未來這個分割槽預計使用的檔案系統！預設都是 Linux 檔案系統的 8300 囉！
+
+ Command (? for help): p
+ Number  Start (sector)    End (sector)  Size       Code  Name
+   1            2048            6143   2.0 MiB     EF02
+   2            6144         2103295   1024.0 MiB  0700
+   3         2103296        65026047   30.0 GiB    8E00
+   4        65026048        67123199   1024.0 MiB  8300  Linux filesystem
+```
+* partprobe 更新 Linux 核心的分割表資訊
+```
+ [root@study ~]# partprobe -s    # 不過還是建議加上 -s 比較清晰！
+```
+* 磁碟格式化
+```
+ [root@study ~]# mkfs.xfs /dev/vda4
+```
+
+
+* 參考資料
+ * [第七章、Linux 磁碟與檔案系統管理](http://linux.vbird.org/linux_basic/0230filesystem.php#disk)
+ * [修改 MySQL / MariaDB 資料庫儲存目錄](https://www.phpini.com/mysql/change-mysql-mariadb-data-directory)
+ * [How To Change a MariaDB Data Directory to a New Location on CentOS 7](https://www.digitalocean.com/community/tutorials/how-to-change-a-mariadb-data-directory-to-a-new-location-on-centos-7)
