--- a/source/_posts/記錄資料庫的相關訊息/記錄資料庫的相關訊息.md
+++ b/source/_posts/記錄資料庫的相關訊息/記錄資料庫的相關訊息.md
@@ -8,17 +8,17 @@ tags: [資料庫]
 如果要dump資料庫的schema,在linux的指令如下
 1. 匯出整個資料庫(包括資料庫中的資料）
 ```
-mysqldump -u username -p  -R Gomo.CCDb > dbname.sql
+ mysqldump -u username -p  -R Gomo.CCDb > dbname.sql
 ```
 2. 匯出資料庫結構（不含資料）
 -R 是有其它的表(如sp)
 ```
-mysqldump -u root -p -d -R Gomo.CCDb > 152schema.sql
+ mysqldump -u root -p -d -R Gomo.CCDb > 152schema.sql
 -----------------------------------------------------
 ```
 資料庫的備份
 ```
-mysqldump -u root -p test_db > test_db.sql 
+ mysqldump -u root -p test_db > test_db.sql 
 ```
 還原資料庫操作
 ```
@@ -29,61 +29,68 @@ mysql -u username -p test_db < test_db.sql
 
 * 檢查原來放的位
 ```
-mysql -u root -p
+ mysql -u root -p
 ```
 在mariabdb裏下指令
 ```
-select @@datadir;
+ select @@datadir;
 ```
 會顯示原來的位置
 ```
-+-----------------+
-| @@datadir       |
-+-----------------+
-| /var/lib/mysql/ |
-+-----------------+
-1 row in set (0.00 sec)
+ +-----------------+
+ | @@datadir       |
+ +-----------------+
+ | /var/lib/mysql/ |
+ +-----------------+
+ 1 row in set (0.00 sec)
 ```
 * 停止 MariaDB:
 ```
-systemctl stop mariadb
-systemctl status mariadb
+ systemctl stop mariadb
+ systemctl status mariadb
 ```
+
 * 目前使用加一個空間來解決
- * lsblk 列出系統上的所有磁碟列表
-```
+ * 使用 lsblk 列出系統上的所有磁碟列表
+ ```
  lsblk
-``` 
+ ```
+
 * 磁碟分割： gdisk
+
 ```
+ 
  [root@study ~]# gdisk /dev/vda  <==仔細看，不要加上數字喔！
-GPT fdisk (gdisk) version 0.8.6
+ GPT fdisk (gdisk) version 0.8.6
+ 
+ Partition table scan:
+   MBR: protective
+   BSD: not present
+   APM: not present
+   GPT: present
+ 
+ Found valid GPT with protective MBR; using GPT.  <==找到了 GPT 的分割表！
+ 
+ Command (? for help):     <==這裡可以讓你輸入指令動作，可以按問號 (?) 來查看可用指令
+ Command (? for help): ?
+ b       back up GPT data to a file
+ c       change a partition's name
+ d       delete a partition           # 刪除一個分割
 
-Partition table scan:
-  MBR: protective
-  BSD: not present
-  APM: not present
-  GPT: present
+ n       add a new partition          # 增加一個分割
+ o       create a new empty GUID partition table (GPT)
+ p       print the partition table    # 印出分割表 (常用)
+ q       quit without saving changes  # 不儲存分割就直接離開 gdisk
 
-Found valid GPT with protective MBR; using GPT.  <==找到了 GPT 的分割表！
+ w       write table to disk and exit # 儲存分割操作後離開 gdisk 
 
-Command (? for help):     <==這裡可以讓你輸入指令動作，可以按問號 (?) 來查看可用指令
-Command (? for help): ?
-b       back up GPT data to a file
-c       change a partition's name
-d       delete a partition           # 刪除一個分割
-
-n       add a new partition          # 增加一個分割
-o       create a new empty GUID partition table (GPT)
-p       print the partition table    # 印出分割表 (常用)
-q       quit without saving changes  # 不儲存分割就直接離開 gdisk
-
-w       write table to disk and exit # 儲存分割操作後離開 gdisk
-
-?       print this menu
-Command (? for help):  
-```  
+ ?       print this menu
+ Command (? for help): 
+ 
+```
+ 
 * 用 gdisk 新增分割槽
+
 ```
  [root@study ~]# gdisk /dev/vda
  Command (? for help): p
@@ -112,10 +119,13 @@ Command (? for help):
    3         2103296        65026047   30.0 GiB    8E00
    4        65026048        67123199   1024.0 MiB  8300  Linux filesystem
 ```
+ 
 * partprobe 更新 Linux 核心的分割表資訊
+
 ```
  [root@study ~]# partprobe -s    # 不過還是建議加上 -s 比較清晰！
 ```
+
 * 磁碟格式化
 ```
  [root@study ~]# mkfs.xfs /dev/vda4
