加入Gitea的使用

--- a/source/_posts/記錄資料庫的相關訊息/記錄資料庫的相關訊息.md
+++ b/source/_posts/記錄資料庫的相關訊息/記錄資料庫的相關訊息.md
@@ -49,8 +49,21 @@ mysql -u username -p test_db < test_db.sql
  systemctl stop mariadb
  systemctl status mariadb
 ```
+#### 使用raid來當空間
+先分割全部的raid來使用
+先停止mariadb
+```
+ systemctl stop mariadb
+```
+在將磁碟mount上
+```
+	vim /etc/fstab
+	
+	/dev/sdb    /var/lib/mysql   xfs  0 0
+```
 
-* 目前使用加一個空間來解決
+
+#### 目前使用加一個空間來解決
  * 使用 lsblk 列出系統上的所有磁碟列表
  ```
  lsblk
