加入記錄linux指令的使用

--- a/source/_posts/記錄資料庫的相關訊息/記錄資料庫的相關訊息.md
+++ b/source/_posts/記錄資料庫的相關訊息/記錄資料庫的相關訊息.md
@@ -59,7 +59,7 @@ mysql -u username -p test_db < test_db.sql
 ```
 	vim /etc/fstab
 	
-	/dev/sdb    /var/lib/mysql   xfs  0 0
+	/dev/sdb3               /var/lib/mysql          xfs     defaults        0 0
 ```
 
 
