更新資料庫訊息

--- a/source/_posts/記錄資料庫的相關訊息/記錄資料庫的相關訊息.md
+++ b/source/_posts/記錄資料庫的相關訊息/記錄資料庫的相關訊息.md
@@ -143,8 +143,11 @@ mysql -u username -p test_db < test_db.sql
 ```
  [root@study ~]# mkfs.xfs /dev/vda4
 ```
-
-
+#### MySQL/MariaDB 性能調整和優化重點
+* 參考
+  [MySQL/MariaDB 性能調整和優化重點](http://alfredprogramlife.blogspot.com/2017/06/mysqlmariadb.html)
+  [清除及設定 MySQL 的死連接](https://n.sfs.tw/content/index/10657)
+  
 * 參考資料
  * [第七章、Linux 磁碟與檔案系統管理](http://linux.vbird.org/linux_basic/0230filesystem.php#disk)
  * [修改 MySQL / MariaDB 資料庫儲存目錄](https://www.phpini.com/mysql/change-mysql-mariadb-data-directory)
